# alive_models

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .yamllint.yaml  404.html  CODEOWNERS  Containerfile  LICENSE  Makefile  README.md  index.html  mkdocs.yaml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yaml
api/: index.html
app/: __init__.py  __main__.py  config.py  server.py
app/models/: __init__.py  _common.py  asr.py  asr_checker.py  fer.py  lid.py  nlp.py  ser.py
app/models/tts/: __base__.py  __init__.py  _azure.py  _bark.py  _edge_tts.py  _fastspeech.py  _orca.py  _parler.py  _seamless.py  _speecht5.py  _whisper.py
assets/javascripts/: bundle.081f42fc.min.js  bundle.ad660dcc.min.js  bundle.fe8b6f2b.min.js
deploy/compose/: README.md  compose.example.yaml
deploy/k8s/: README.md  manifest.example.yaml
deploy/k8s/alive-models/: Chart.yaml  values.yaml
deploy/k8s/alive-models/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  pvc.yaml  service.yaml
docs/: api.md  index.md  models.md
docs/static/css/: custom.css  termynal.css
examples/: all.py  asr.py  fer.py  lid.py  nlp.py  requirements.txt  ser.py  tts.py
examples/samples/: john_doe.ogv
models/: index.html
requirements/: all.txt  dev.txt  docs.txt  examples.txt  main.txt
scripts/: init.sh  start.sh
scripts/dev/: _common.py  build.py  clean.py  deploy.py  requirements.py  start.py  stop.py  version_bump.py
search/: search_index.json
static/js/: custom.js
