[project]
name = 'alive-models'
description = 'ALIVE models deployment'
authors = [
    {name= 'Panagiotis Kasnesis', email= 'pkasnesis@thingenious.io'},
    {name= 'Lazaros Toumanidis', email= 'laztoum@protonmail.com'}
]
license= {text = 'MIT'}
readme = 'README.md'
requires-python = '>=3.10,<3.13'
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Languare :: Python :: 3.12',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Scientific/Engineering :: Web Services',
]
dependencies = [
    'accelerate==0.30.1',
    'ctranslate2==4.2.1',
    'cython==3.0.10',
    'deepface==0.0.91',
    'faster-whisper==1.0.2',
    'librosa==0.10.2.post1',
    'numpy',
    'nltk==3.8.1',
    'nvidia-pytriton==0.5.5; platform_system == "Linux" and platform_machine == "x86_64"',
    'onnx==1.16.1',
    'onnxruntime-gpu==1.18.0',
    'openai-whisper==20231117',
    'optimum==1.20.0',
    'pandas',
    'soundfile==0.12.1',
    'tensorflow==2.16.1',
    'tf-keras==2.16.0',
    'torch==2.3.0',
    'torchaudio==2.3.0',
    'transformers>=4.39.3',
    'ultralytics==8.2.28',
]
[project.urls]
homepage = 'https://thingenious.github.io/alive-models/'
repository = 'https://github.com/thingenious/alive-models.git'
[project.optional-dependencies]
dev = [
    'autoflake==2.3.1',
    'bandit==1.7.8',
    'black==24.4.2',
    'flake8==7.0.0',
    'isort==5.13.2',
    'mypy==1.10.0',
    'pandas-stubs==2.2.2.240514',
    'pre-commit==3.7.1',
    'pydocstyle==6.3.0',
    'pylint==3.2.2',
    'pylint-exit==1.2.0',
    'python-dotenv==1.0.1',
    'ruff==0.4.7',
    'toml==0.10.2',
    'types-PyYAML==6.0.12.20240311',
    'types-toml==0.10.8.20240310',
    'yamllint==1.35.1',
]
docs = [
  'mike==2.1.1',
  'mdx_truly_sane_lists==1.3',
  'mkdocs==1.6.0',
  'mkdocs-include-markdown-plugin==6.0.7',
  'mkdocs-material==9.5.25',
  'mkdocs-open-in-new-tab==1.0.3',
  'mkdocstrings[crystal,python]==0.25.1',
]
examples = [
  'av==12.1.0',
  'httpx==0.27.0',
  'Pillow==10.3.0',
  'playsound==1.3.0',
  'pygobject==3.48.2',
]
# black
[tool.black]
line-length = 120
skip-string-normalization=true
include = '''
    \.pyi?$
'''
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | .local
  | _build
  | __init__.py
  | .local
)/
'''

# mypy
[tool.mypy]
files = '.'
platform = 'linux'
ignore_missing_imports = true
disallow_untyped_defs = true
warn_unused_ignores = false
follow_imports = 'skip'
exclude = [
    '.venv',
    '.local'
]
plugins = [
]
# isort
[tool.isort]
profile ='black'
skip=[
    '.venv',
    './.local'
]
include_trailing_comma=true
force_grid_wrap=0
use_parentheses=true
line_length=120
[tool.pydocstyle]
match-dir='([^!(.venv)].*)([^!(.local)].*)'

# pylint
[tool.pylint.master]
load-plugins = [
    'pylint.extensions.mccabe',
    'pylint.extensions.redefined_variable_type',
    'pylint.extensions.broad_try_clause',
    'pylint.extensions.no_self_use',
]
extension-pkg-whitelist= []
fail-under=8.0
ignore=["CVS"]
ignore-paths = [
    "^(.*)/.venv/*",
    "^(.*)/.local/.*",
    ".venv/*",
    ".local/.*"
]
unsafe-load-any-extension="no"

[tool.pylint.messages_control]
enable=["c-extension-no-member"]
[tool.pylint.fotmat]
max-line-length=120
[tool.pylint.similarities]
ignore-imports="yes"
ignore-signatures="yes"
min-similarity-lines=10
[tool.pylint.design]
max-args=9
max-attributes=9

# bandit
[tool.bandit]
exclude_dirs = [
    ".venv",
    ".local"
]
# B104: bind to all interfaces (0.0.0.0)
# B110: allow pass on try/except
# B404: allow import subprocess
# B602, B603: allow shell=True (subprocess,popen)
skips = ['B104', 'B110', 'B404', 'B602', 'B603' ]

# ruff
[tool.ruff]
line-length = 120
extend-exclude = []

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "Q"]
ignore = []
# # Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# # Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
exclude = ["*.pyi", "*.j2"]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
line-ending = "lf"
